feat: Modify field type to string
